samples/_failures_safe/1761283659_e529b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dff59b37.c: In function ‘main’:
./samples/SAFE/__tmp_dff59b37.c:144:5: error: expected declaration or statement at end of input
  144 |     }
      |     ^
